<resources>
    <string name="app_name">Clue</string>
    <string name="btlogin">LOGIN</string>
    <string name="textforggetpasswd">Olvido Su Password</string>
    <string name="textcrearcuenta">Registrese Aqui</string>
    <string name="minimopassword">6</string>
    <string name="falloAtenticacion">Fallo Autenticacion</string>
    <string name="EnterEmail">INGRESE SU EMAIL</string>
    <string name="EnterPassword">INGRESE SU PASSWORD</string>
    <string name="ConfirmPassword">CONFIRME SU PASSWORD</string>
    <string name="registro">REGISTRESE</string>
    <string name="singUp">Sing Up</string>
    <string name="Bienvenido">BIENVENIDO</string>
    <string name="forget">Olvido Su Password ingrese su email para recuperar su cuenta</string>
    <string name="resetPassw">Resetear su Contraseña</string>
    <string name="title_activity_dashboard">Dashboard</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="result_text_defaul">Por Favor Encuadrar el Codigo Qr con la Camara</string>
    <string name="title_activity_maps">Map</string>

</resources>
