<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/scanner"
            android:icon="@drawable/ic_menu_camera"
            android:title="Scanner" />
        <item
            android:id="@+id/lista"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Lista" />
        <item
            android:id="@+id/ubicacion"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Ubicacion" />
        <item
            android:id="@+id/herramientas"
            android:icon="@drawable/ic_menu_manage"
            android:title="Herramientas" />
    </group>

</menu>
